--- a/sobre.html
+++ b/sobre.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a href="/#depoimentos">Depoimentos</a></li>
                     <li class="nav-item"><a href="./sobre.html">Quem somos</a></li>
                     <li class="nav-item"><a href="#">Blog</a></li>
-                    <li class="nav-item"><a href="#">Contatos</a></li>
+                    <li class="nav-item"><a href="/#footer">Contatos</a></li>
             </div>
             <div class="social">
                 <a href="https://www.tiktok.com/@paulocantarutti" target="_blank">
@@ -63,7 +63,7 @@
                     <li class="nav-item"><a href="/#depoimentos">Depoimentos</a></li>
                     <li class="nav-item"><a href="./sobre.html">Quem somos</a></li>
                     <li class="nav-item"><a href="#">Blog</a></li>
-                    <li class="nav-item"><a href="#">Contatos</a></li>
+                    <li class="nav-item"><a href="/#footer">Contatos</a></li>
                 </ul>
             </nav>
 
@@ -169,7 +169,7 @@
 
         </section>
     </main>
-    <footer>
+    <footer id="footer">
 
         <div class="contact">
             <div class="footer-msg">
