--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a href="/#depoimentos">Depoimentos</a></li>
                     <li class="nav-item"><a href="./sobre.html">Quem somos</a></li>
                     <li class="nav-item"><a href="#">Blog</a></li>
-                    <li class="nav-item"><a href="#">Contatos</a></li>
+                    <li class="nav-item"><a href="/#footer">Contatos</a></li>
             </div>
             <div class="social">
                 <a href="https://www.tiktok.com/@paulocantarutti" target="_blank">
@@ -63,9 +63,9 @@
                             Terapia</a></li>
                     <li class="nav-item"><a href="/#terapias">Tratamentos</a></li>
                     <li class="nav-item"><a href="/#depoimentos">Depoimentos</a></li>
-                    <li class="nav-item"><a href="./sobre.html">Quem somos</a></li>
-                    <li class="nav-item"><a href="#">Blog</a></li>
-                    <li class="nav-item"><a href="#">Contatos</a></li>
+                    <li class="nav-item"><a href="/sobre.html">Quem somos</a></li>
+                    <li class="nav-item"><a href="/blog">Blog</a></li>
+                    <li class="nav-item"><a href="/#footer">Contatos</a></li>
                 </ul>
             </nav>
 
@@ -282,7 +282,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="footer">
 
         <div class="contact">
             <div class="footer-msg">
