--- a/sobre.html
+++ b/sobre.html
@@ -220,5 +220,7 @@
     </footer>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<script src="./script/script.js"></script>
 
 </html>
