--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@
                     <div class="card">
                         <img src="./assets/TELEFONE.png" alt="TELEFONE">
                         <hr />
-
+                        <span>
+                            Horários: 8:00 - 20:00</span>
                         <a
                             href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0">
                             Whatsapp: (34)99837-2915 </a>
-                        <span>
-                            Horários: 8:00 - 20:00</span>
+
 
                     </div>
                 </div>
@@ -307,11 +307,12 @@
                     <div class="card">
 
                         <img src="./assets/E-MAIL.png" alt="E-MAIL">
-                        </a>
+
                         <hr />
                         <span>
+                            E-mail:
                             <a href="mailto:contato@lpterapeutas.com">
-                                E-mail: contato@lpterapeutas.com
+                                contato@lpterapeutas.com
                             </a>
                         </span>
                     </div>
