--- a/index.html
+++ b/index.html
@@ -282,7 +282,19 @@
         </div>
     </section>
 
+    <section id="main-blog">
+        <div class="main-blog-container">
+            <h1> Acesse nosso <b>Blog</b> e fique por dentro dos nossos conteúdos</h1>
+            <button>Ver publicações <span style="font-size: 30px; margin-left: 20px;">&#x2192</span></button>
+        </div>
+    </section>
+
     <footer id="footer">
+        <div class="whatsapp-btn">
+            <a class="whatsapp-link" href="https://wa.me/5534998372915" target="_blank">
+                <img src="./assets/whatsapp.svg" alt="whatsapp">
+            </a>
+        </div>
 
         <div class="contact">
             <div class="footer-msg">
