--- a/sobre.html
+++ b/sobre.html
@@ -131,7 +131,7 @@
         <section class="about-02">
 
             <div class="img-container">
-                <img src="./assets/LAURIENE 1.png" alt="lauriene">
+                <img src="./assets/LAURIENE 2.png" alt="lauriene">
             </div>
 
             <div class="text">
@@ -173,47 +173,54 @@
 
         <div class="contact">
             <div class="footer-msg">
-                <h1>Entre em contato </h1>
+                <h1>Como podemos te ajudar? </h1>
             </div>
 
             <div class="container-all">
                 <div class="container center">
                     <div class="card">
-                        <img src="./assets/TELEFONE.png" alt="TELEFONE">
-                        <hr />
-
+                        <h1>Ligue para a LP</h1>
                         <a
                             href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0">
                             Whatsapp: (34)99837-2915 </a>
                         <span>
                             Horários: 8:00 - 20:00</span>
 
+                        <img src="./assets/TELEFONE.png" alt="TELEFONE">
+
+
                     </div>
                 </div>
                 <div class="container center">
                     <div class="card">
 
-                        <img src="./assets/E-MAIL.png" alt="E-MAIL">
+
+                        <h1>
+                            Fale conosco pelo E-mail:
+                        </h1>
+                        <a href="mailto:contato@lpterapeutas.com">
+                            contato@lpterapeutas.com
                         </a>
-                        <hr />
-                        <span>
-                            <a href="mailto:contato@lpterapeutas.com">
-                                E-mail: contato@lpterapeutas.com
-                            </a>
-                        </span>
+                        <img src="./assets/E-MAIL.png" alt="E-MAIL">
                     </div>
                 </div>
                 <div class="container center">
                     <div class="card">
-                        <img src="./assets/social.png" alt="social">
-                        <hr />
-                        <span>Nossas Redes:</span>
+
+                        <h1>Nossas Redes:</h1>
 
                         <a href="https://www.instagram.com/paulocantaruttioficial" target="blank">Instagram
                             Paulo</a>
                         <a href="https://www.instagram.com/lauriene.reis_psic" target="blank">Instagram Lauriene</a>
+                        <img src="./assets/social.png" alt="social">
                     </div>
                 </div>
+            </div>
+
+            <div class="copy">
+                <span>Site desenvoldido por: <a href="http://www.marcoscantarutti.com.br">Marcos Cantarutti</a> |
+                    Designed by: <a href="https://www.behance.net/reisandcodesign">Vinicíus Reis</a></span>
+                <span>Todos os direitos reservados.</span>
             </div>
         </div>
 
